Version 2.02.28 -
================================
  Add support for renaming mirrored LVs.
  Factor out core of lvrename() to lv_rename lvm library function.
  Add --log argument to specify log type for mirrors.
  Don't try to monitor devices which we failed to create.
  Don't leak a file descriptor in fcntl_lock_file(), when fcntl fails.
  Remove create_dir function; use now-equivalent dm_create_dir instead
  Detect stream write failure reliably; new fn: lvm_fclose; use dm_fclose
  Fix clvmd if compiled with gulm support. (2.02.26)
  Trivial fix to lvdisplay man page.
  Add vg_lock_and_read() external library function.
  Fix loading of persistent cache if cache_dir is used. (2.02.23)
  Eliminate uses of strdup+basename.  Use last_path_component instead.
  Use gcc's printf attribute wherever possible.
  In _line_append, use "sizeof buf - 1" rather than equivalent "4095"
  Introduce is_same_inode macro, now including a comparison of st_dev.
  Don't leak a file descriptor in _lock_file(), when flock fails.
  Add SUN's LDOM virtual block device (vdisk) and ps3disk to filters.
  Split metadata-external.h out from metadata.h for the tools to use.

Version 2.02.27 - 17th July 2007
================================
  Fix snapshot cow area deactivation if origin is not active. (2.02.13)
  Fix configure libdevmapper.h check when --with-dmdir is used.
  Turn _add_pv_to_vg() into external library function add_pv_to_vg().
  Add pv_by_path() external library function.
  Tidy clvmd-openais of redundant bits, and improve an error report.
  Cope with find_seg_by_le() failure in check_lv_segments().
  Call dev_iter_destroy() if _process_all_devs() is interrupted by sigint.
  Add vg_mda_count and pv_mda_count columns to reports.
  Fix dumpconfig to use log_print instead of stdout directly.
  Remove unused parameter 'fid' from _add_pv_to_vg.
  Add kernel and device-mapper targets versions to lvmdump.
  Replace BSD (r)index with C89 str(r)chr.